tests/baselines/reference/YieldExpression6_es6(strict=true).errors.txt
YieldExpression6_es6.ts(1,11): error TS7023: 'foo' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
YieldExpression6_es6.ts(2,9): error TS2488: Type '() => any' must have a '[Symbol.iterator]()' method that returns an iterator.


==== YieldExpression6_es6.ts (2 errors) ====
    function* foo() {
              ~~~
!!! error TS7023: 'foo' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
      yield*foo
            ~~~
!!! error TS2488: Type '() => any' must have a '[Symbol.iterator]()' method that returns an iterator.
    }